[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
monsoon = { path = "../monsoon", default-features = false }
serde = { version = "1.0.152", features = ["derive"], default-features = false }
serde_json = { version = "1.0.99", default-features = false }
tokio = { version = "1.26.0", features = ["macros", "rt", "rt-multi-thread"], default-features = false }
tower = { version = "0.4.13", default-features = false }
tui = { version = "0.19.0", git = "https://github.com/jiripospisil/tui-rs.git", rev = "81d077564e8e8058", default-features = false , features = ["crossterm"] }
crossterm = { version = "0.26.1", features = ["event-stream"], default-features = false }
futures = { version = "0.3.27", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
itertools = { version = "0.10.5", default-features = false, features = ["use_std"] }
chrono = { version = "0.4.24", default-features = false }
chrono-tz = { version = "0.8.1", default-features = false }
viuer = { version = "0.6.2", default-features = false }
image = { version = "0.24.5", default-features = false }
include_dir = { version = "0.7.3", default-features = false }
