[package]
name = "monsoon"
version = "0.1.1"
edition = "2021"
authors = ["Jiri Pospisil <jiri@jpospisil.com>"]
description = "Monsoon is a library for accessing weather data produced by The Norwegian Meteorological Institute. Most notably, this data is used on Yr.no."
keywords = ["weather", "forecast", "api", "met", "yr"]
repository = "https://github.com/jiripospisil/monsoon"
license = "MIT"

[dependencies]
chrono = { version = "0.4.35", features = ["serde", "clock"], default-features = false }
reqwest = { version = "0.11.25", features = ["gzip", "default-tls"], default-features = false }
serde = { version = "1.0.156", features = ["derive"], default-features = false }
serde_json = { version = "1.0.114", default-features = false }
thiserror = { version = "1.0.39", default-features = false }
tower-service = { version = "0.3.2", default-features = false }

[dev-dependencies]
cli-table = "0.4.7"
tokio = { version = "1.26.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tower = { version = "0.4.13", default-features = false, features = ["util", "limit"] }
